// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header test 로그인 되어있다면 1`] = `
<div
  className="container-fluid"
  style={
    Object {
      "marginTop": "10px",
    }
  }
>
  <div
    className="row text-center"
  >
    <div
      className="col-sm text-left"
      style={
        Object {
          "marginLeft": "30px",
        }
      }
    >
      <button
        className="btn btn-danger"
      >
        <div
          className="d-flex"
        >
          Reacto
          <h4>
            |
          </h4>
          Connecto
        </div>
      </button>
    </div>
    <div
      className="col-sm"
    >
      <Link
        className="text-danger"
        replace={false}
        style={
          Object {
            "textDecoration": "none",
          }
        }
        to="/"
      >
         
        <h1>
          5437!
        </h1>
      </Link>
    </div>
    <div
      className="col-sm text-right"
      style={
        Object {
          "marginRight": "30px",
        }
      }
    >
      <div>
        <ButtonDropdown>
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            color="btn btn-outline-danger"
          >
            g1
          </DropdownToggle>
          <DropdownMenu
            flip={true}
            tag="div"
          >
            <DropdownItem
              header={true}
              tag="button"
              toggle={true}
            >
               
              <li>
                <Link
                  replace={false}
                  to="/settings"
                >
                   정보수정 
                </Link>
              </li>
            </DropdownItem>
            <DropdownItem
              tag="button"
              toggle={true}
            >
               
              <li>
                <Link
                  replace={false}
                  to="/broadcast/setting"
                >
                  방송국
                </Link>
              </li>
            </DropdownItem>
            <DropdownItem
              divider={true}
              tag="button"
              toggle={true}
            />
            <DropdownItem
              tag="button"
              toggle={true}
            >
              <li>
                <a>
                  <i
                    className="material-icons"
                  >
                    lock_open
                  </i>
                </a>
              </li>
            </DropdownItem>
          </DropdownMenu>
        </ButtonDropdown>
      </div>
    </div>
  </div>
  <nav
    className="navbar navbar-expand-lg navbar-light bg-light"
  >
    <div
      className="nav-wrapper blue darken-1"
    >
      <ul
        className="navbar-nav mr-auto"
      >
        <li
          className="nav-item active"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/streamingList"
          >
            전체
          </Link>
        </li>
        <li
          className="nav-item active"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/moonlight"
          >
            팔로우
          </Link>
        </li>
        <li
          className="nav-item active"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/moonlight"
          >
            스토리보드
          </Link>
        </li>
        <li
          className="nav-item active"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/moonlight"
          >
            클립
          </Link>
        </li>
        <li
          className="nav-item active"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/moonlight"
          >
            소통
          </Link>
        </li>
        <li
          className="nav-item active"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/moonlight"
          >
            커뮤니티
          </Link>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Header test 로그인 되어있지 않다면 1`] = `
<div
  className="container-fluid"
  style={
    Object {
      "marginTop": "10px",
    }
  }
>
  <div
    className="row text-center"
  >
    <div
      className="col-sm text-left"
      style={
        Object {
          "marginLeft": "30px",
        }
      }
    >
      <button
        className="btn btn-danger"
      >
        <div
          className="d-flex"
        >
          Reacto
          <h4>
            |
          </h4>
          Connecto
        </div>
      </button>
    </div>
    <div
      className="col-sm"
    >
      <Link
        className="text-danger"
        replace={false}
        style={
          Object {
            "textDecoration": "none",
          }
        }
        to="/"
      >
         
        <h1>
          5437!
        </h1>
      </Link>
    </div>
    <div
      className="col-sm text-right"
      style={
        Object {
          "marginRight": "30px",
        }
      }
    >
      <li>
        <i
          className="material-icons"
        >
          vpn_key
        </i>
      </li>
    </div>
  </div>
  <nav
    className="navbar navbar-expand-lg navbar-light bg-light"
  >
    <div
      className="nav-wrapper blue darken-1"
    >
      <ul
        className="navbar-nav mr-auto"
      >
        <li
          className="nav-item active"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/streamingList"
          >
            전체
          </Link>
        </li>
        <li
          className="nav-item active"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/moonlight"
          >
            팔로우
          </Link>
        </li>
        <li
          className="nav-item active"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/moonlight"
          >
            스토리보드
          </Link>
        </li>
        <li
          className="nav-item active"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/moonlight"
          >
            클립
          </Link>
        </li>
        <li
          className="nav-item active"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/moonlight"
          >
            소통
          </Link>
        </li>
        <li
          className="nav-item active"
        >
          <Link
            className="nav-link"
            replace={false}
            to="/moonlight"
          >
            커뮤니티
          </Link>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;
